# ClashAI

./: .gitignore  LICENSE  README.md  pyproject.toml
clashai/: _core_exceptions.py  brain.py  paths.py
clashai/adb/: __init__.py  exceptions.py
clashai/agents/: base.py
clashai/clashai/: __init__.py  brain.py  paths.py
clashai/combat/: __init__.py  action_space.py  agent.py  agent_v4.py  combat_observer.py  environment.py  environment_v4.py  episode_lifecycle.py  hero_ability.py  reward_shaping.py  spell_caster.py  state_encoder.py  troop_manager.py
clashai/config/: logging.py  perception.py  rl.py  timing.py  window.py
clashai/navigation/: calibrate_ui.py  game_loop.py  gdc_navigator.py  zoom_control.py
clashai/perception/: building_detector.py  debug_overlay.py  deploy_zone.py  events.py  inference_lock.py  perception_thread.py  reward_reader.py  (+7 more)
configs/: coc.yaml  coc_buildings.yaml  coc_troops.yaml  coc_walls.yaml  troops.json  ui_positions.json
docs/: CHANGELOG.md  ROADMAP.md  TROUBLESHOOTING.md  baselines.md  migration_v3_to_v4.md
tools/: calibrate_ui.py  capture_combat.py  capture_screen_state.py  capture_troop_bar.py  collect_digit_crops.py  convert_labelme.py  convert_labelme_walls.py  debug_screen_cnn.py  generate_crops.py  inspect_emulator_window.py  prepare_dataset.py  rename.py  run_test.py  test_clean.py  test_deploy_zone.py  test_screen_capture.py  test_troop_bar_webcam.py  train_cnn.py  train_rl.py  train_rl_v4.py  train_screen_cnn.py  train_yolo_buildings.py  train_yolo_troop_bar.py  train_yolo_troops.py  train_yolo_walls_seg.py
(+181 files in other folders)
