[project]
name = "clashai"
version = "4.0.0"
description = "IA autonome qui joue à Clash of Clans via ADB"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0",
    "torchvision",
    "ultralytics>=8.0",
    "opencv-contrib-python",
    "numpy",
    "pillow",
    "easyocr",
    "pyyaml",
    "mss>=10.2.0",
    "tqdm>=4.67.3",
    "windows-capture>=2.0.0",
    "roboflow>=1.3.8",
]

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[project.scripts]
clashai-brain = "clashai.brain:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clashai"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
